# library-book-finder

./: .gitignore  LICENSE  README.md  config.py  crop_extractor.py  data_models.py  detection_processor.py  fix_labels.py  main.py  obb.py  obb_train.py  ocr_processor.py  pyproject.toml  run_inference.py  tracker.py  visualizer.py
runs/obb/train/: args.yaml
runs/obb/train2/: args.yaml  results.csv
runs/obb/train3/: args.yaml  results.csv
runs/obb/train4/: args.yaml  results.csv
runs/obb/train5/: args.yaml
runs/obb/yolo11n_obb_hp_set_1/: args.yaml
runs/obb/yolo11n_obb_hp_set_12/: args.yaml
runs/obb/yolo11n_obb_hp_set_13/: args.yaml
runs/obb/yolo11n_obb_hp_set_14/: args.yaml  results.csv
